PalmerPetsProject/src/objects/Deal_Action__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>Accept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Deal Actions</relationshipLabel>
        <relationshipName>Deal_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal</label>
        <referenceTo>Deal__c</referenceTo>
        <relationshipLabel>Deal Actions</relationshipLabel>
        <relationshipName>Deal_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Deal Action</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DA-{0000}</displayFormat>
        <label>Deal  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>